<resources>
    <string name="header_tasks">Meine Aufgaben:</string>
    <string name="label_tasks">Aufgaben</string>
    <string name="label_edit_membership">Mitgliedschaft bearbeiten</string>
    <string name="label_remove_members">Entfernen:</string>
    <string name="label_add">Hinzufügen:</string>
    <string name="project_users_header">Mitlgieder-Übersicht für:</string>
    <string-array name="sorting_table">
        <item>Nach Usernamen sortieren A-Z</item>
        <item>Nach Usernamen sortieren Z-A</item>
        <item>Nach Gruppierung sortieren A-Z</item>
        <item>Nach Gruppierung sortieren Z-A</item>
    </string-array>
    <string name="label_edit_project_user">Projekt-Mitglieder verwalten</string>
    <string name="leave">Verlassen</string>
    <string name="delete_account">Account deaktivieren</string>
    <string name="impossible_register_editing">
        Sie können keine nicht existierende Gruppe bearbeiten!
    </string>
    <string name="register_name">Gruppenname:</string>
    <string name="label_delete">Löschen</string>
    <string name="my_projects">Übersicht meiner Projekte:</string>
    <string name="all_projects">Übersicht der Projekte des Teams:</string>
    <string name="error_fields_filled_wrong">Die benötigten Daten wurden nicht ausgefüllt
        oder falsch ausgefüllt!</string>
    <string name="error_deadline">Das Datum muss mindestens 24 Stunden in der Zukunft liegen!</string>
    <string name="hint_deadline">Bitte geben Sie die Deadline an</string>
    <string name="no_rights">Sie haben keine Berechtigung für die gewählte Aktion!</string>
    <string name="error_get_members">Die Team-Mitglieder konnten nicht geladen werden!</string>
    <string name="chooseColor">Farbe wählen:</string>
    <string name="label_registers">Gruppe:</string>
    <string name="create">Erstellen</string>
    <string name="hint_register_name">Name der Gruppe eingeben</string>
    <string name="label_name">Name:</string>
    <string name="invitation">invitation</string>
    <string name="request">request</string>
    <string name="agree">agree</string>
    <string name="disagree">disagree</string>
    <string name="no_invitations">Keine Einladungen vorhanden!</string>
    <string name="no_requests">Keine Anfragen vorhanden!</string>
    <string name="invitations">Einladungen:</string>
    <string name="requests">Anfragen:</string>
    <string name="app_name">ProManager</string>
    <string name="logout">Logout</string>
    <string name="team_edited">Sie haben Ihr Team erfolgreich bearbeitet!</string>
    <string name="blank">-----</string>
    <string name="label_username">Username:</string>
    <string name="label_password">Passwort:</string>
    <string name="label_first_name">Vorname:</string>
    <string name="label_surname">Nachname:</string>
    <string name="label_birthday">Geburtstag:</string>
    <string name="label_address">Adresse:</string>
    <string name="label_email">E-Mail Adresse:</string>
    <string name="label_phoneNr">Telefonnummer:</string>
    <string name="label_tributes">Ehrungen:</string>
    <string name="label_day_of_entry">Beitrittsdatum:</string>
    <string name="label_login">Login</string>
    <string name="label_register">Registrieren</string>
    <string name="text_info_main_activity">Willkommen bei ProManager! \n\n</string>
    <string name="label_team_name">Team-Name:</string>
    <string name="label_description">Beschreibung:</string>
    <string name="label_admin">Administration:</string>
    <string name="label_project_name">Projekt-Name:</string>
    <string name="label_deadline">Abschlusstermin:</string>
    <string name="label_project_number_Appointments">Anzahl der Treffen:</string>
    <string name="label_project_manager">Projektleitung:</string>
    <string name="label_team">Team:</string>
    <string name="hint_username">Bitte geben Sie Ihren Usernamen ein</string>
    <string name="hint_password">Bitte geben Sie Ihr Passwort ein</string>
    <string name="hint_register">Noch kein Konto? Registrieren Sie sich hier!</string>
    <string name="hint_first_name">Bitte geben Sie Ihren Vornamen ein</string>
    <string name="hint_surname">Bitte geben Sie Ihren Nachnamen ein</string>
    <string name="hint_birthday">Bitte geben Sie Ihren Geburtstag ein</string>
    <string name="hint_address">Bitte geben Sie Ihre Adresse ein</string>
    <string name="hint_email">Bitte geben Sie Ihre E-Mail Adresse ein</string>
    <string name="hint_phoneNr">Bitte geben Sie Ihre Telefonnummer ein</string>
    <string name="label_password_validation">Passwort wiederholen:</string>
    <string name="hint_password_validation">Passwort erneut eingeben</string>
    <string name="error_registration_title">Fehler beim Registrieren!</string>
    <string name="success_registration_title">Registration erfolgreich!</string>
    <string name="error_login_title">Fehler beim Login!</string>
    <string name="success_login_title">Login erfolgreich!</string>
    <string name="error_internal">Interner Fehler!</string>
    <string name="hint_team_name">Name des Teams</string>
    <string name="create_new_team">Erstellen Sie ein neues Team!</string>
    <string name="hint_team_description">Beschreibung des Teams</string>
    <string name="btn_create_team">Erstellen!</string>
    <string name="error">Fehler!</string>
    <string name="success">Glückwunsch!</string>
    <string name="edit">Bearbeiten</string>
    <string name="ready">Fertig!</string>
    <string name="hint_filter">Suchbegriff eingeben</string>
    <string name="error_create_team_input">Fehler!\n
        Ihre Eingaben waren falsch! \n
        Bitte füllen Sie die Felder korrekt aus!
    </string>
    <string name="empty_data">Noch nichts los hier! \n\n
        Werde Teil eines Teams, um alle Funktionen nutzen zu können!</string>
    <string name="error_fields_empty">Einige Felder wurden nicht ausgefüllt! \n
    Bitte geben Sie die Werte ein!</string>

    <string-array name="navigation_drawer_items_array">
        <item>Pinnwand</item>
        <item>Profil</item>
        <item>Team</item>
        <item>Projekte</item>
        <item>Termine</item>
        <item>Team finden</item>
        <item>Nutzer finden</item>
    </string-array>

    <!-- Added automatically -->
    <string name="title_activity_navigation">NavigationActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_navigation_action">NavigationAction</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="label_worker">Arbeiter</string>
    <string name="teams_tasks">Aufgaben des Teams</string>
    <string name="no_projects">Sie nehmen momentan noch an keinem Projekt teil und haben deshalb auch keine Meetings!</string>
    <string name="create_appointment">Meeting Erstellen</string>
    <string name="label_time">Uhrzeit:</string>
    <string name="choose_time">Uhrzeit wählen</string>
    <string name="choose_appointment">Wählen Sie ein Meeting am</string>
    <string name="label_date">Datum:</string>
    <string name="take_part">Zusagen</string>
    <string name="maybe">Vielleicht</string>
    <string name="decline">Absagen</string>
    <string name="send_participation">Teilnahme eintragen</string>
    <string name="statistic_header">Teilnahmestatistiken für das Projekt</string>
    <string name="newsflash">Newsflash:</string>
    <string name="label_category">Kategorie:</string>
    <string name="choose_chat">Wählen Sie einen Chat aus:</string>
    <string name="label_add_tributes">Ehrung hinzufügen:</string>
    <string name="hint_forgot_password">Passwort vergessen</string>
    <string name="lable_username">Username:</string>
    <string name="label_old_password">PIN:</string>
    <string name="hint_type_old_password">PIN eingeben</string>
    <string name="get_pin">PIN anfordern</string>
    <string name="choose_chat_members">Wähle die User für den Chat:</string>
    <string name="attention">Achtung!</string>
    <string name="create_chat_name">Chat Name:</string>
    <string name="remove">Entfernen</string>

</resources>
