<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10sp"
        android:layout_marginRight="10sp"
        android:layout_marginTop="10sp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10sp"
            android:text="@string/label_first_name"
            android:textColor="@color/text"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/text_register_first_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10sp"
            android:textColor="@color/text"
            android:hint="@string/hint_first_name" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10sp"
            android:text="@string/label_surname"
            android:textColor="@color/text"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/text_register_surname"
            android:layout_width="match_parent"
            android:textColor="@color/text"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10sp"
            android:hint="@string/hint_surname" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/text"
            android:layout_marginBottom="10sp"
            android:text="@string/label_birthday"
            android:textSize="20sp"
            android:textStyle="bold" />


        <DatePicker
            android:id="@+id/text_register_birthday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10sp"
            android:datePickerMode="spinner"
            android:calendarViewShown="false"
            android:hint="@string/hint_birthday"
            android:inputType="date" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10sp"
            android:textColor="@color/text"
            android:text="@string/label_address"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/text_register_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10sp"
            android:textColor="@color/text"
            android:hint="@string/hint_address" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10sp"
            android:textColor="@color/text"
            android:text="@string/label_email"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/text_register_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/text"
            android:layout_marginBottom="10sp"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10sp"
            android:textColor="@color/text"
            android:text="@string/label_phoneNr"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/text_register_phoneNr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/text"
            android:layout_marginBottom="10sp"
            android:hint="@string/hint_phoneNr"
            android:inputType="phone" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10sp"
            android:textColor="@color/text"
            android:text="@string/label_username"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/text_register_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/text"
            android:layout_marginBottom="10sp"
            android:hint="@string/hint_username" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10sp"
            android:text="@string/label_password"
            android:textSize="20sp"
            android:textColor="@color/text"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/text_register_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10sp"
            android:hint="@string/hint_password"
            android:textColor="@color/text"
            android:inputType="textPassword" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10sp"
            android:text="@string/label_password_validation"
            android:textColor="@color/text"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/text_register_password_validation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10sp"
            android:hint="@string/hint_password_validation"
            android:textColor="@color/text"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/button_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/text"
            android:text="@string/label_register"
            android:layout_marginBottom="15sp" />

    </LinearLayout>

</ScrollView>
