<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    >

    <TextView
        android:id="@+id/text_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_info_main_activity"
        android:gravity="center"
        android:layout_marginBottom="25dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:textSize="20sp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_username"
        android:textStyle="bold"
        android:layout_marginBottom="10dp"
        android:textSize="20sp"
        />

    <EditText
        android:id="@+id/main_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:hint="@string/hint_username"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_password"
        android:textStyle="bold"
        android:layout_marginBottom="10dp"
        android:textSize="20sp"
        />

    <EditText
        android:id="@+id/main_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        />

    <Button
        android:id="@+id/button_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_login"
        android:layout_marginBottom="10dp"
        />

    <TextView
        android:id="@+id/main_link_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hint_register"
        android:gravity="center"
        android:textSize="15sp"
        />


</LinearLayout>
