<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_username"
        android:textStyle="bold"
        android:layout_marginBottom="10dp"
        />

    <TextView
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_first_name"
        android:textStyle="bold"
        android:layout_marginBottom="10dp"
        />

    <TextView
        android:id="@+id/firstName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_surname"
        android:textStyle="bold"
        android:layout_marginBottom="10dp"
        />

    <TextView
        android:id="@+id/surname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_birthday"
        android:textStyle="bold"
        android:layout_marginBottom="10dp"
        />

    <TextView
        android:id="@+id/birthday"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_address"
        android:textStyle="bold"
        android:layout_marginBottom="10dp"
        />

    <TextView
        android:id="@+id/address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_email"
        android:textStyle="bold"
        android:layout_marginBottom="10dp"
        />

    <TextView
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_phoneNr"
        android:textStyle="bold"
        android:layout_marginBottom="10dp"
        />

    <TextView
        android:id="@+id/phoneNr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_tributes"
        android:textStyle="bold"
        android:layout_marginBottom="10dp"
        />

    <TextView
        android:id="@+id/tributes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_day_of_entry"
        android:textStyle="bold"
        android:layout_marginBottom="10dp"
        />

    <TextView
        android:id="@+id/dayOfEntry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />


</LinearLayout>
