<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:theme="@style/FontSizeStyle"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5sp"
        android:text="@string/label_username" />

    <TextView
        android:id="@+id/text_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5sp" />

    <TextView
        android:id="@+id/users_tribute"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5sp"
        android:text="@string/label_add_tributes" />

    <EditText
        android:id="@+id/add_tribute"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5sp"
        android:text="@string/label_registers" />

    <Spinner
        android:id="@+id/drop_down_registers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:spinnerMode="dropdown"
        android:layout_marginBottom="5sp"
        android:layout_gravity="center" />

    <Button
        android:id="@+id/btn_finish_edit_team_member"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5sp"
        android:text="@string/ready" />

    <Button
        android:id="@+id/delete_team_member"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/remove" />

</LinearLayout>