<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_centerInParent="true"
    tools:context="com.grum.raphael.projectmanagerclient.com.grum.raphael.projectmanagerclient.fragments.ProjectsFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20sp"
        android:textSize="20sp"
        android:textColor="@color/text"
        android:text="@string/create_new_team"
        android:gravity="center"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="@color/text"
        android:layout_marginBottom="5sp"
        android:text="Team Name:"
        />

    <EditText
        android:id="@+id/team_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_team_name"
        android:textSize="20sp"
        android:textColor="@color/text"
        android:layout_marginBottom="5sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="@color/text"
        android:layout_marginBottom="5sp"
        android:text="@string/label_description" />

    <EditText
        android:id="@+id/team_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="@color/text"
        android:hint="@string/hint_team_description"
        android:layout_marginBottom="15sp" />

    <Button
        android:id="@+id/btn_create_team"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_create_team"
        android:textColor="@color/text" />

</LinearLayout>
