<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:layout_marginTop="10dp"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_project_name"
        android:textStyle="bold"
        android:layout_marginBottom="10dp"
        android:textSize="20sp"
        />

    <TextView
        android:id="@+id/text_project_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_description"
        android:textStyle="bold"
        android:layout_marginBottom="10dp"
        android:textSize="20sp"
        />

    <TextView
        android:id="@+id/text_project_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_deadline"
        android:textStyle="bold"
        android:layout_marginBottom="10dp"
        android:textSize="20sp"
        />
    
    <TextView
        android:id="@+id/text_project_deadline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_project_number_Appointments"
        android:textStyle="bold"
        android:layout_marginBottom="10dp"
        android:textSize="20sp"
        />

    <TextView
        android:id="@+id/text_project_appointments_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_project_manager"
        android:textStyle="bold"
        android:layout_marginBottom="10dp"
        android:textSize="20sp"
        />

    <TextView
        android:id="@+id/text_project_manager"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_team"
        android:textStyle="bold"
        android:layout_marginBottom="10dp"
        android:textSize="20sp"
        />

    <TextView
        android:id="@+id/text_project_team"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        />

</LinearLayout>